force-app/main/default/objects/S3_File__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents if the file has been deleted from S3.</description>
    <inlineHelpText>Represents if the file has been deleted from S3.</inlineHelpText>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>