force-app/main/default/objects/S3_File__c/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <formula>IF(
  CONTAINS(File_Name__c, &quot;.&quot;),
  LOWER(
    /* Get all characters after the last dot */
    RIGHT(
      File_Name__c,
      FIND(
        &quot;.&quot;,
        /* Reverse the string to locate the first dot from the end */
        REVERSE(File_Name__c)
      ) - 1
    )
  ),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Extension</label>
    <type>Text</type>
</CustomField>