force-app/main/default/objects/S3_File__c/fields/File_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Last_Modified_Date__c</fullName>
    <formula>DATETIMEVALUE(&quot;1970-01-01 00:00:00&quot;) + ( VALUE(File_Last_Modified_Epoch__c) / 1000 / 86400)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Last Modified Date</label>
    <type>DateTime</type>
</CustomField>