force-app/main/default/objects/S3_File__c/fields/File_Last_Modified_Epoch__c.field-meta.xml
<CustomField>
    <fullName>File_Last_Modified_Epoch__c</fullName>
    <description>Represents when the file was last modified. Number of seconds (or milliseconds) since Jan 1, 1970 00:00:00 UTC</description>
    <inlineHelpText>Represents when the file was last modified. Number of seconds (or milliseconds) since Jan 1, 1970 00:00:00 UTC</inlineHelpText>
    <label>File Last Modified Epoch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>