force-app/main/default/objects/S3_File__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Unique identifier for a file (object) within a specific S3 bucket. It&apos;s essentially the full path to the object inside the bucket.</description>
    <inlineHelpText>Unique identifier for a file (object) within a specific S3 bucket. It&apos;s essentially the full path to the object inside the bucket.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>