force-app/main/default/objects/S3_File__c/fields/Object_URL__c.field-meta.xml
<CustomField>
    <fullName>Object_URL__c</fullName>
    <description>Direct path to a specific file (object) stored in an Amazon S3 bucket.</description>
    <inlineHelpText>Direct path to a specific file (object) stored in an Amazon S3 bucket.</inlineHelpText>
    <label>Object URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>