force-app/main/default/objects/S3_File__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <description>Id of related record.</description>
    <inlineHelpText>Id of related record.</inlineHelpText>
    <label>Parent Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>