force-app/main/default/objects/S3_File__c/fields/S3_File_Object__c.field-meta.xml
<CustomField>
    <fullName>S3_File_Object__c</fullName>
    <description>Represents the object the file is stored in.</description>
    <inlineHelpText>Represents the object the file is stored in.</inlineHelpText>
    <label>S3 File Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>