force-app/main/default/objects/S3_File__c/fields/S3_Path__c.field-meta.xml
<CustomField>
    <fullName>S3_Path__c</fullName>
    <description>Path to file in S3.</description>
    <inlineHelpText>Path to file in S3.</inlineHelpText>
    <label>S3 Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>