force-app/main/default/objects/S3_File__c/fields/Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Size_Bytes__c</fullName>
    <label>Size Bytes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>