force-app/main/default/objects/S3_File__c/fields/Size_Kilobytes__c.field-meta.xml
<CustomField>
    <fullName>Size_Kilobytes__c</fullName>
    <formula>TEXT(ROUND(VALUE(Size_Bytes__c) / 1024, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size Kilobytes</label>
    <type>Text</type>
</CustomField>