force-app/main/default/objects/S3_File__c/fields/Size_Label__c.field-meta.xml
<CustomField>
    <fullName>Size_Label__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Size_Megabytes__c)) &amp;&amp; VALUE(Size_Megabytes__c) &gt;= 1,
    TEXT(ROUND(VALUE(Size_Megabytes__c), 2)) &amp; &quot; MB&quot;,
    IF(
        NOT(ISBLANK(Size_Kilobytes__c)) &amp;&amp; VALUE(Size_Kilobytes__c) &gt;= 1,
        TEXT(ROUND(VALUE(Size_Kilobytes__c), 2)) &amp; &quot; KB&quot;,
        TEXT(ROUND(VALUE(Size_Bytes__c), 2)) &amp; &quot; B&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size Label</label>
    <type>Text</type>
</CustomField>