force-app/main/default/objects/S3_File__c/fields/Size_Megabytes__c.field-meta.xml
<CustomField>
    <fullName>Size_Megabytes__c</fullName>
    <formula>TEXT(ROUND(VALUE( Size_Kilobytes__c ) / 1024, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size Megabytes</label>
    <type>Text</type>
</CustomField>