force-app/main/default/objects/S3_File__c/fields/sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>sObject_Type__c</fullName>
    <description>Related to what salesforce object type.</description>
    <inlineHelpText>Related to what salesforce object type.</inlineHelpText>
    <label>sObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>