force-app/main/default/objects/S3_File__c/fields/Versions__c.field-meta.xml
<CustomField>
    <fullName>Versions__c</fullName>
    <description>Number of file versions.</description>
    <inlineHelpText>Number of file versions.</inlineHelpText>
    <label>Versions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>