force-app/main/default/objects/S3_File__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>